# ur5_gripper_system

./: README.md
gazebo_models/MPNet_TableCenter/: model.sdf
gazebo_models/MPNet_TableRight/: model.sdf
icl_ur5_setup_moveit_config/: package.xml
rg6_gripper_bringup/: CMakeLists.txt  package.xml
robotiq_2f_gripper_action_server/: CMakeLists.txt  package.xml
ur5_gripper_bringup/: CMakeLists.txt  package.xml
ur5_gripper_description/: CMakeLists.txt  package.xml
ur5_gripper_description/launch/: test_robotiq_arg_2f_140_model.launch  ur5_gripper_upload.launch  ur5_gripper_upload_calibrated.launch
ur5_gripper_description/robots/: kinect2.xacro  kinect2_3D_object.xacro  ur5_rg2.xacro  ur5_rg6.xacro  ur5_rg6_kinect2.xacro  ur5_robotiq_140.xacro  ur5_robotiq_140_joint_limited.xacro  ur5_robotiq_140_joint_limited_d415.xacro  ur5_robotiq_140_joint_limited_kinect2.xacro  ur5_robotiq_3f_gripper.xacro  ur5_robotiq_3f_gripper_joint_limited.xacro  ur5_robotiq_3f_joint_limited.xacro
ur5_gripper_description/robots/calibration/: ur5_robotiq_140.xacro  ur5_robotiq_140_joint_limited.xacro
ur5_gripper_description/urdf/: rg2.urdf.xacro  rg6.urdf.xacro  robotiq_arg2f.xacro  robotiq_arg2f_140_model.xacro  robotiq_arg2f_140_model_macro.xacro  robotiq_arg2f_finger_tips.xacro  robotiq_arg2f_transmission.xacro  robotiq_fts300.urdf.xacro
ur5_gripper_description/urdf/sensors/: common.xacro  kinect2.gazebo.xacro  kinect2.urdf.xacro
ur5_gripper_gazebo/: CMakeLists.txt  package.xml
ur5_gripper_moveit_config/: package.xml
urscript/: External_control.urp
(+136 files in other folders)
