<?xml version="1.0"?>
<package format="2">
  <name>ur5_gripper_description</name>
  <version>0.0.1</version>
  <description>UR5 arm with Robotiq Gripper Description</description>
  <maintainer email="ruicao@polyu.edu.hk">Rui Cao</maintainer>
  <author email="ruicao@polyu.edu.hk">Rui Cao</author>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>urdf</exec_depend>

  <export/>
</package>
